# timecatcher

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-05-19-timetracker-app.md
src/timetracker/: app.tcss  main.py  models.py
src/timetracker/db/: connection.py  queries.py
src/timetracker/screens/: analytics.py  dashboard.py  goals.py  history.py  pomodoro.py
src/timetracker/services/: goals.py  sessions.py  timer.py
src/timetracker/widgets/: sparkline.py  timer_display.py
tests/: conftest.py
tests/test_db/: test_connection.py  test_queries.py
tests/test_screens/: test_app.py  test_widgets.py
tests/test_services/: test_goals.py  test_models.py  test_sessions.py  test_timer.py
