[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timetracker"
version = "0.1.0"
description = "Goal-focused Pomodoro timer for the terminal"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.86.0",
]

[project.scripts]
tt = "timetracker.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/timetracker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "textual[dev]>=0.86.0",
]
